--- a/src/Germadent.UserManagementCenter.App/Views/AddUserWindow.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/AddUserWindow.xaml
@@ -95,8 +95,12 @@
                           Content="Заблокировать учетную запись"/>
 
                 <TextBlock Grid.Row="0" Grid.Column="2" Text="Фотография" Margin="0,0,0,6" FontSize="10" HorizontalAlignment="Center"/>
-                <Border Grid.Row="1" Grid.RowSpan="9" Grid.Column="2" Margin="0,0,0,0" BorderThickness="1" CornerRadius="5" SnapsToDevicePixels="True" BorderBrush="Gray" Width="200"></Border>
+                <Border Grid.Row="1" Grid.RowSpan="9" Grid.Column="2" Margin="0,0,0,0" BorderThickness="1" CornerRadius="5" SnapsToDevicePixels="True" BorderBrush="Gray"
+                        Width="200" Height="250">
+                    <Image Source="{Binding Image}" />
+                </Border>
                 <Button Grid.Row="10" Grid.Column="2" Width="100" Height="23" Margin="0,6,0,0" HorizontalAlignment="Center"
+                        Command="{Binding ChangeUserImageCommand}"
                         Content="Выбрать фото"/>
             </Grid>
 
