--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/CustomerCatalogWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/CustomerCatalogWindow.xaml
@@ -22,6 +22,10 @@
     <Window.InputBindings>
         <KeyBinding Key="N" Modifiers="Control"
                     Command="{Binding AddCustomerCommand}"/>
+        <KeyBinding Key="F2"
+                    Command="{Binding EditCustomerCommand}"/>
+        <KeyBinding Key="Delete" 
+                    Command="{Binding DeleteCustomerCommand}"/>
     </Window.InputBindings>
     <Grid Margin="12">
         <Grid.ColumnDefinitions>
@@ -48,13 +52,16 @@
                     Command="{Binding DeleteCustomerCommand}"/>
         </StackPanel>
 
-        <DataGrid Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
+        <DataGrid x:Name="CustomerGrid" Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
+                  SelectionChanged="CustomerGrid_OnSelectionChanged"
                   ItemsSource="{Binding Customers}"
                   SelectedItem="{Binding SelectedCustomer}"
                   AlternationCount="2">
             <DataGrid.InputBindings>
-                <KeyBinding Key="Enter" Command="{Binding EditCustomerCommand}"/>
-                <KeyBinding Key="Delete" Command="{Binding DeleteCustomerCommand}"/>
+                <KeyBinding Key="F2"
+                            Command="{Binding EditCustomerCommand}"/>
+                <KeyBinding Key="Delete" 
+                            Command="{Binding DeleteCustomerCommand}"/>
             </DataGrid.InputBindings>
             <DataGrid.ContextMenu>
                 <ContextMenu>
