--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/AddPricePositionWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/AddPricePositionWindow.xaml
@@ -40,6 +40,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование" VerticalAlignment="Center"/>
@@ -67,16 +68,27 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
 
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Код" VerticalAlignment="Center" Margin="0,6,0,0"/>
-            <TextBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0" Text="{Binding UserCode, UpdateSourceTrigger=PropertyChanged}" 
+            <TextBlock Grid.Row="3" Grid.Column="0" Text="Изделие" VerticalAlignment="Center" Margin="0,6,0,0"/>
+            <ComboBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0" Height="23"
+                      ItemsSource="{Binding ProsthticTypes}"
+                      SelectedItem="{Binding SelectedProsthticType}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate DataType="{x:Type model:DictionaryItemDto}">
+                        <TextBlock Text="{Binding Name}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+            <TextBlock Grid.Row="4" Grid.Column="0" Text="Код" VerticalAlignment="Center" Margin="0,6,0,0"/>
+            <TextBox Grid.Row="4" Grid.Column="1" Margin="6,6,0,0" Text="{Binding UserCode, UpdateSourceTrigger=PropertyChanged}" 
                      HorizontalAlignment="Left" Width="150"/>
 
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="Цена с STL" VerticalAlignment="Center" Margin="0,6,0,0"/>
-            <TextBox Grid.Row="4" Grid.Column="1" Margin="6,6,0,0" Text="{Binding PriceStl, UpdateSourceTrigger=PropertyChanged}" 
+            <TextBlock Grid.Row="5" Grid.Column="0" Text="Цена с STL" VerticalAlignment="Center" Margin="0,6,0,0"/>
+            <TextBox Grid.Row="5" Grid.Column="1" Margin="6,6,0,0" Text="{Binding PriceStl, UpdateSourceTrigger=PropertyChanged}" 
                      HorizontalAlignment="Left" Width="150"/>
 
-            <TextBlock Grid.Row="5" Grid.Column="0" Text="Цена с модели" VerticalAlignment="Center" Margin="0,6,0,0"/>
-            <TextBox Grid.Row="5" Grid.Column="1" Margin="6,6,0,0" Text="{Binding PriceModel, UpdateSourceTrigger=PropertyChanged}" 
+            <TextBlock Grid.Row="6" Grid.Column="0" Text="Цена с модели" VerticalAlignment="Center" Margin="0,6,0,0"/>
+            <TextBox Grid.Row="6" Grid.Column="1" Margin="6,6,0,0" Text="{Binding PriceModel, UpdateSourceTrigger=PropertyChanged}" 
                      HorizontalAlignment="Left" Width="150"/>
 
         </Grid>
