--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/WizardWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/WizardWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:models="clr-namespace:Germadent.Rma.Model;assembly=Germadent.Rma.Model"
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
         xmlns:views="clr-namespace:Germadent.Rma.App.Views"
         xmlns:wizardUi="clr-namespace:Germadent.Rma.App.Views.Wizard"
         xmlns:wizard="clr-namespace:Germadent.Rma.App.ViewModels.Wizard"
+        xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
         mc:Ignorable="d"
         Title="{Binding Title}"
         ShowInTaskbar="False"
