--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabProjectStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabProjectStepUserControl.xaml
@@ -6,6 +6,7 @@
              xmlns:model="clr-namespace:Germadent.Rma.Model;assembly=Germadent.Rma.Model"
              xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
              xmlns:wizard="clr-namespace:Germadent.Rma.App.Views.Wizard"
+             xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
              mc:Ignorable="d" 
              d:DesignWidth="800"
              d:DesignHeight="600"
