--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorControl.xaml
@@ -110,16 +110,13 @@
            </DataGrid.Columns>
         </DataGrid>
 
-        <Border Grid.Column="0" Grid.Row="0" Background="LightGray" Opacity="0.6"
-                Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}"
+        <Border Grid.Column="0" Grid.Row="0" Background="LightGray" VerticalAlignment="Center" HorizontalAlignment="Center" BorderBrush="DarkGray" BorderThickness="1" CornerRadius="2"
                 Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <StackPanel Orientation="Vertical">
+                <controls:BusyIndicator Width="32" Height="32" Fill="Gray" IsBusy="{Binding IsBusy}"/>
+                <TextBlock Text="{Binding BusyReason}" Margin="0,6,0,0" HorizontalAlignment="Center"/>
+            </StackPanel>
         </Border>
-
-        <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="2" Orientation="Vertical" VerticalAlignment="Center"
-                    Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}">
-            <controls:BusyIndicator Width="32" Height="32" Fill="Gray" IsBusy="{Binding IsBusy}"/>
-            <TextBlock Text="{Binding BusyReason}" Margin="0,6,0,0" HorizontalAlignment="Center"/>
-        </StackPanel>
 
 
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="12,6,0,0">
